@@ -1,3 +1,8 @@
+2003-07-15  Markus Germeier  <mager@tzi.de>
+	* libmpio/src/directory.c (mpio_dentry_get_real): 
+	  follow up fix for the broken internal FAT fix
+	  added FTYPE_BROKEN
+
 2003-07-14  Markus Germeier  <mager@tzi.de>
 	* libmpio/src/directory.c (mpio_dentry_get_startcluster): 
 	  fixed a bug Yury stumbled across
